--- a/code/text-classification.ipynb
+++ b/code/text-classification.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
@@ -224,10 +226,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vectorizer = CountVectorizer()\n",
+    "vectorizer.fit(sentences_train)\n",
+    "X_train = vectorizer.transform(sentences_train)\n",
+    "X_test = vectorizer.transform(sentences_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(750, 1714)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(250, 1714)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[0].toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First use some logisticRegression for a try"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.796"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier = LogisticRegression()\n",
+    "classifier.fit(X_train, y_train)\n",
+    "score = classifier.score(X_test, y_test)\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare three different datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dataprocess():\n",
+    "    def __init__(self, data, source):\n",
+    "        self.df = data[data['source'] == source]\n",
+    "        self.sentences = self.df['sentence'].values\n",
+    "        self.y = self.df['label'].values\n",
+    "        \n",
+    "    def train_test_data_split(self):\n",
+    "        sentences_train, sentences_test, y_train, y_test = train_test_split(self.sentences, \n",
+    "                                                                                                                 self.y, \n",
+    "                                                                                                                 test_size=0.25, \n",
+    "                                                                                                                 random_state=1000)\n",
+    "        return sentences_train, sentences_test, y_train, y_test      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CountTheVectorizer():\n",
+    "    def __init__(self):\n",
+    "        self.vectorizer = CountVectorizer()\n",
+    "        \n",
+    "    def fit_ve(self, sentences_train, sentences_test):\n",
+    "        self.vectorizer.fit(sentences_train)\n",
+    "        X_train = self.vectorizer.transform(sentences_train)\n",
+    "        X_test = self.vectorizer.transform(sentences_test)\n",
+    "    \n",
+    "        return X_train, X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Classfier():\n",
+    "    def __init__(self):\n",
+    "        self.classfier = LogisticRegression()\n",
+    "    \n",
+    "    def fit_model(self, X_train, y_train, X_test, y_test):\n",
+    "        self.classfier.fit(X_train, y_train)\n",
+    "        score = self.classfier.score(X_test, y_test)\n",
+    "        \n",
+    "        return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for yelp data: 0.796\n",
+      "Accuracy for amazon data: 0.796\n",
+      "Accuracy for imdb data: 0.7486631016042781\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    for source in df['source'].unique():\n",
+    "        data = Dataprocess(df, source)\n",
+    "        \n",
+    "        sentences_train, sentences_test, y_train, y_test =  data.train_test_data_split()\n",
+    "        \n",
+    "        vectorizer = CountTheVectorizer()\n",
+    "        X_train, X_test = vectorizer.fit_ve(sentences_train, sentences_test)\n",
+    "        \n",
+    "        classfier = Classfier()\n",
+    "        score = classfier.fit_model(X_train, y_train, X_test, y_test)\n",
+    "        print('Accuracy for {} data: {}'.format(source, score))\n",
+    "        \n",
+    "        \n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
